--- a/py-my-first-homepage/templates/index.html
+++ b/py-my-first-homepage/templates/index.html
@@ -2,62 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcom!</title>
-    <link rel="stylesheet" href="static/bootstrap-4.5.3-dist/css/bootstrap.min.css">
-    <style>
-        li:hover {
-            font-size: 120%;
-        }
-    </style>
-
+    <title>WelCome!</title>
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
+
 <body>
 
+{# 欢迎巨幕 #}
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">Flink & Python学习资源</h1>
+        <p class="lead">Flink & Python & More</p>
+    </div>
+</div>
 
-<div class="jumbotron">
-    <h1 class="display-4">Hello, world! {{ date }} </h1>
-    <p class="lead">
-    <p><strong>Apache Flink 系列入门教程这里</strong></p></p>
-    <hr class="my-4">
-    <ul class="list-group">
-        <li class="list-group-item">
-            <a href="https://ververica.cn/developers/flink-training-course1">零基础入门</a>
-        </li>
-        <li class="list-group-item">
-            <a href="https://ververica.cn/developers/flink-training-course2">进阶篇</a>
-        </li>
-        <li class="list-group-item">
-            <a href="https://ververica.cn/developers/flink-training-course3">运维&amp;实战</a>
-        </li>
-        <li class="list-group-item">
-            <a href="http://maven.apache.org/plugins/maven-resources-plugin/examples/copy-resources.html">
-                About How to move folder through maven in phase
-            </a>
-        </li>
-
-        <li class="list-group-item">
-            <a href="#">Status of Respberry Pi @ Home</a>
-            <table class="table">
-                <thead class="thead-dark">
-                <tr>
-                    {% for k in pi_info.keys() %}
-                        <th scope="col">{{ k }}</th>
-                    {% endfor %}
-                </tr>
-                </thead>
-                <tr class="table-success">
-                    {% for d in pi_info.values() %}
-                        <th scope="col">{{ d }}</th>
-                    {% endfor %}
-                </tr>
-
-            </table>
-        </li>
-    </ul>
+{#URL列表#}
+<br>
+<table class="table table-striped table-dark">
+    <thead class="thead-light">
+    <tr>
+        <th scope="col">链接名称</th>
+        <th scope="col">链接URL</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for name, url in urls.items() %}
+        <tr>
+            <td>{{ name }}</td>
+            <td><a href="{{ url }}" style="color:white">{{ url }}</a></td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
 
 </div>
+
+
 </body>
+<script></script>
 
 
-<script src="static/bootstrap-4.5.3-dist/js/bootstrap.bundle.min.js"></script>
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </html>
