--- a/py-my-first-homepage/templates/index.html
+++ b/py-my-first-homepage/templates/index.html
@@ -12,16 +12,17 @@
 <body>
 
 {# 欢迎巨幕 #}
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid" style="margin: auto; height: 80%">
     <div class="container">
         <h1 class="display-4">Flink & Python学习资源</h1>
         <p class="lead">Flink & Python & More</p>
     </div>
 </div>
 
+
 {#URL列表#}
 <br>
-<table class="table table-striped table-dark">
+<table class="table table-striped table-dark" style="margin: auto; width:80%">
     <thead class="thead-light">
     <tr>
         <th scope="col">链接名称</th>
@@ -40,6 +41,32 @@
 
 </div>
 
+{# url 登记表单 #}
+<form style="width:80%; margin: auto" action="{{ url_for('WebRecorder.update_url') }}" method="POST">
+    <div class="form-group">
+        <label for="new url address">new url address</label>
+        <input type="text" class="form-control" name="urlAddress" aria-describedby="emailHelp">
+        <small id="Help" class="form-text text-muted">provided url will be recorded for reuse</small>
+    </div>
+    <div class="form-group">
+        <label for="new url address name">new url name</label>
+        <input type="text" class="form-control" name="urlName">
+        <small id="Help" class="form-text text-muted">the url will come with a name</small>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
+
+{# 链接删除 #}
+<form style="width:80%; margin: auto" action="{{ url_for('WebRecorder.delete_url') }}" method="POST">
+    <span class="form-group">
+        <label for="remove url">new url name</label>
+        <input type="text" class="form-control" name="urlName">
+        <small id="Help" class="form-text text-muted">the url will come with a name</small>
+        <button type="submit" class="btn btn-danger">Delete</button>
+    </span>
+
+</form>
 
 </body>
 <script></script>
