--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 {# 欢迎巨幕 #}
 <div class="jumbotron jumbotron-fluid" style="margin: auto; height: 80%">
     <div class="container">
-        <h1 class="display-4">Flink & Python学习资源</h1>
+        <h1 class="display-4">学习资源</h1>
         <p class="lead">Flink & Python & More</p>
     </div>
 </div>
