re-config jenkins

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 <div class="jumbotron jumbotron-fluid" style="margin: auto; height: 80%">
     <div class="container">
         <h1 class="display-4">学习资源</h1>
-        <p class="lead">Flink & Python & More</p>
+        <p class="lead">Flink & Python & MAVEN & More</p>
     </div>
 </div>
 
