--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Linany</title>
-    <link rel="short icon" href="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fbpic.588ku.com%2Felement_origin_min_pic%2F00%2F89%2F69%2F0956ee2a3635fd1.jpg&refer=http%3A%2F%2Fbpic.588ku.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1612363134&t=c2e25974a3baefd32c1b13a771b8b83c"></link>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-</head>
-
-<body>
-
-{# 欢迎巨幕 #}
-<div class="jumbotron jumbotron-fluid" style="margin: auto; width:80%; height: 80%;">
-    <div class="container">
-        <h1 class="display-4">Linany学习资源</h1>
-        <p class="lead">Flink & Python & MAVEN & More</p>
-    </div>
-</div>
-
-
+{% extends "meta.html" %}
+{% block body %}
 {#URL列表#}
 <br>
 <table class="table table-striped table-dark" style="margin: auto; width:80%">
@@ -42,7 +21,7 @@
 </div>
 
 {# url 登记表单 #}
-<form style="width:80%; margin: 20px auto" action="{{ url_for('WebRecorder.update_url') }}" method="POST">
+<form style="width:80%; margin: 20px auto" action="{{ url_for('WebRecorder.update_url') }}" method="POST" id="edit">
 
     <div class="form-row">
         <div class="col">
@@ -63,7 +42,7 @@
 
 
 {# 链接删除 #}
-<form style="width: 80%; margin: 20px auto" action="{{ url_for('WebRecorder.delete_url') }}" method="POST">
+<form style="width: 80%; margin: 20px auto" action="{{ url_for('WebRecorder.delete_url') }}" method="POST" id="delete">
     <div class="form-row">
 
         <div class="col">
@@ -74,19 +53,4 @@
     </div>
     <button type="submit" class="btn btn-danger">Delete</button>
 </form>
-
-</body>
-<script></script>
-
-
-<!-- JS, Popper.js, and jQuery -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
-</html>
+{% endblock %}
