静态资源解耦

--- a/application/templates/meta.html
+++ b/application/templates/meta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Linany</title>
     <link rel="short icon"
-          href="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fbpic.588ku.com%2Felement_origin_min_pic%2F00%2F89%2F69%2F0956ee2a3635fd1.jpg&refer=http%3A%2F%2Fbpic.588ku.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1612363134&t=c2e25974a3baefd32c1b13a771b8b83c"></link>
+          href="{{ web_images.title_ico }}"></link>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
