è¯è¯新增用户表

--- a/application/templates/meta.html
+++ b/application/templates/meta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Linany</title>
     <link rel="short icon"
-          href="{{ web_images.title_ico }}"></link>
+          href="{{ web_images.test_ico }}"></link>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
