--- a/application/templates/member/login.html
+++ b/application/templates/member/login.html
@@ -8,12 +8,33 @@
     </style>
 {% endblock %}
 {% block body1 %}
-    <div class="card">
-        <div class="card-header bg-light">登录</div>
-        <div class="card-body">
-            <blockquote class="blockquote mb-0">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            </blockquote>
+    <div class="container">
+        {# 卡片,对应 bt3 的面板组件 #}
+        <div class="row">
+            <div class="card">
+                <div class="card-header">用户登录</div>
+                <div class="card-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">用户名</label>
+                            <input type="email"
+                                   class="form-control"
+                                   id="exampleInputEmail1"
+                                   aria-describedby="emailHelp"
+                                   placeholder="请输入用户名称">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                                else.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">密码</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1"
+                                   placeholder="请输入登录密码">
+                        </div>
+                        <button type="submit" class="btn btn-lg btn-success">Submit</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
+
 {% endblock %}
