--- a/application/templates/member/register.html
+++ b/application/templates/member/register.html
@@ -1,1 +1,51 @@
 {% extends "common/root.html" %}
+{% block head %}
+    <style>
+        div {
+            width: 1500px;
+            margin: auto;
+        }
+    </style>
+{% endblock %}
+{% block body1 %}
+    <div class="container-fluid">
+        {# 卡片,对应 bt3 的面板组件 #}
+        <div class="card">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card-header">用户注册</div>
+                    <div class="card-body">
+                        <div class="form-horizontal reg_wrap">
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">用户名</label>
+                                <input type="email"
+                                       class="form-control"
+                                       id="registerName"
+                                       aria-describedby="emailHelp"
+                                       placeholder="请输入用户名称">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">密码</label>
+                                <input type="password" class="form-control"
+                                       id="pwd"
+                                       placeholder="请输入登录密码">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">密码确认</label>
+                                <input type="password" class="form-control"
+                                       id="pwdRecon"
+                                       placeholder="请确认登录密码">
+                            </div>
+                            <button type="submit" class="btn btn-lg btn-block btn-success do-reg">注册</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+{% block script %}
+    <script src="/static/{{ web_js.reg_js }}"></script>
+{% endblock %}
