--- a/application/templates/common/root.html
+++ b/application/templates/common/root.html
@@ -23,7 +23,7 @@
 {% block navbar %}
     <div style="margin-bottom: 70px;">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
-            <h2 class="navbar-brand" href="#">我的收藏夹</h2>
+            <a class="navbar-brand" href="{{ url_for('WebRecorder.index')}}">我的收藏夹</a>
             <!-- 导航栏表单 -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
